# nnstreamer

./: CMakeLists.txt  meson.build
gst/nnstreamer/: nnstreamer.c  tensor_repo.c  tensor_repo.h
gst/nnstreamer/tensor_reposink/: tensor_reposink.c  tensor_reposink.h
gst/nnstreamer/tensor_reposrc/: tensor_reposrc.c  tensor_reposrc.h
gst/tensor_initializer/: CMakeLists.txt  tensor_initializer.c  tensor_initializer.h
nnstreamer_example/custom_example_LSTM/: meson.build
nnstreamer_example/custom_example_RNN/: meson.build
nnstreamer_example/custom_example_average/: meson.build
nnstreamer_example/custom_example_opencv/: meson.build
nnstreamer_example/custom_example_passthrough/: meson.build
nnstreamer_example/custom_example_scaler/: meson.build
tests/: CMakeLists.txt  meson.build
tests/nnstreamer_plugins/: unittest_plugins.cpp
tests/nnstreamer_repo/: runTest.sh
tests/nnstreamer_repo_dynamicity/: tensor_repo_dynamic_test.c
tests/nnstreamer_sink/: unittest_sink.cpp
tools/development/: nnstreamerCodeGenCustomFilter.py
