library('nnstreamer_customfilter_passthrough',
  'nnstreamer_customfilter_example_passthrough.c',
  include_directories: nnstreamer_inc,
  install: get_option('install-example'),
  install_dir: join_paths(unittest_install_dir,'nnstreamer_example','custom_example_passthrough')
)

library('nnstreamer_customfilter_passthrough_variable',
  'nnstreamer_customfilter_example_passthrough_variable.c',
  include_directories: nnstreamer_inc,
  install: get_option('install-example'),
  install_dir: join_paths(unittest_install_dir,'nnstreamer_example','custom_example_passthrough')
)
