library('nnstreamer_customfilter_scaler',
  'nnstreamer_customfilter_example_scaler.c',
  dependencies: [glib_dep],
  include_directories: nnstreamer_inc,
  install: get_option('install-example'),
  install_dir: join_paths(unittest_install_dir, 'nnstreamer_example','custom_example_scaler')
)

library('nnstreamer_customfilter_scaler_allocator',
  'nnstreamer_customfilter_example_scaler_allocator.c',
  dependencies: [glib_dep],
  include_directories: nnstreamer_inc,
  install: get_option('install-example'),
  install_dir: join_paths(unittest_install_dir, 'nnstreamer_example','custom_example_scaler')
)
